[gd_scene load_steps=27 format=3 uid="uid://bf6s6ujtmlgn6"]

[ext_resource type="Texture2D" uid="uid://xv6rx8abyrjb" path="res://src/PNG/spritesheets/frog-idle.png" id="1_31tt1"]
[ext_resource type="Script" path="res://Enemies/frog.gd" id="1_65aga"]
[ext_resource type="Texture2D" uid="uid://bjtcvdds8ada7" path="res://src/PNG/sprites/enemy-death/enemy-death-1.png" id="2_bjkbb"]
[ext_resource type="Texture2D" uid="uid://bh23julkgllvw" path="res://src/PNG/spritesheets/frog-jump.png" id="2_f7j5d"]
[ext_resource type="Texture2D" uid="uid://dd6fj1mjo0n7y" path="res://src/PNG/sprites/enemy-death/enemy-death-2.png" id="3_1qkrj"]
[ext_resource type="Texture2D" uid="uid://b360y46d7m56o" path="res://src/PNG/sprites/enemy-death/enemy-death-3.png" id="4_yo8mg"]
[ext_resource type="Texture2D" uid="uid://cyl78dj3mdggt" path="res://src/PNG/sprites/enemy-death/enemy-death-4.png" id="5_6ysxk"]
[ext_resource type="Texture2D" uid="uid://tqqerw4u3ho0" path="res://src/PNG/sprites/enemy-death/enemy-death-5.png" id="6_6gs18"]
[ext_resource type="Texture2D" uid="uid://b0cvt1w1f7gl8" path="res://src/PNG/sprites/enemy-death/enemy-death-6.png" id="7_u05l7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwdr"]
atlas = ExtResource("1_31tt1")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_718fg"]
atlas = ExtResource("1_31tt1")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tq2r"]
atlas = ExtResource("1_31tt1")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohqdt"]
atlas = ExtResource("1_31tt1")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsmnd"]
atlas = ExtResource("2_f7j5d")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfwl3"]
atlas = ExtResource("2_f7j5d")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4ch"]
atlas = ExtResource("2_f7j5d")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cugwq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bjkbb")
}, {
"duration": 1.0,
"texture": ExtResource("3_1qkrj")
}, {
"duration": 1.0,
"texture": ExtResource("4_yo8mg")
}, {
"duration": 1.0,
"texture": ExtResource("5_6ysxk")
}, {
"duration": 1.0,
"texture": ExtResource("6_6gs18")
}, {
"duration": 1.0,
"texture": ExtResource("7_u05l7")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_718fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tq2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohqdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwdr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsmnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfwl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4ch")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnvy8"]
size = Vector2(19, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_t0d8o"]
radius = 189.003

[sub_resource type="Animation" id="Animation_7i31n"]
resource_name = "Death"
length = 0.65
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_soff1"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_2b84l"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ohvwe"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_yxmdq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_risyw"]
_data = {
"Death": SubResource("Animation_7i31n"),
"Fall": SubResource("Animation_soff1"),
"Idle": SubResource("Animation_2b84l"),
"Jump": SubResource("Animation_ohvwe"),
"RESET": SubResource("Animation_yxmdq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5loo7"]
size = Vector2(19, 3.5)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_65aga")

[node name="death_animation_timer" type="Timer" parent="."]
wait_time = 0.65
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_cugwq")
animation = &"Jump"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -7)
shape = SubResource("RectangleShape2D_pnvy8")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-1, -9)
shape = SubResource("CircleShape2D_t0d8o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_risyw")
}

[node name="Enemy Death" type="Area2D" parent="."]
position = Vector2(-1, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Death"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_5loo7")
debug_color = Color(0.992157, 0, 0, 0.419608)

[connection signal="timeout" from="death_animation_timer" to="." method="_on_death_animation_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Enemy Death" to="." method="_on_enemy_death_body_entered"]
